fix(video-plugin): incorrect poster z-index

--- a/packages/white-video-plugin/src/index.less
+++ b/packages/white-video-plugin/src/index.less
@@ -13,6 +13,7 @@
         left: 0;
         right: 0;
         bottom: 0;
+        z-index: 1;
 
         > img {
             width: 100%;
@@ -27,7 +28,7 @@
         align-items: center;
         box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
         background-image: linear-gradient(180deg, #e0e1e0 0%, #cdcdcc 100%);
-        z-index: 1;
+        z-index: 2;
 
         > img {
             width: 20px;
@@ -73,6 +74,7 @@
         align-items: stretch;
         justify-content: center;
         height: calc(100% - 32px);
+        z-index: 2;
 
         > audio {
             flex-grow: 1;
